#210 Fix overflow scrollbar
T9158

--- a/src/components/LanguageSwitch/LanguageSwitch.css
+++ b/src/components/LanguageSwitch/LanguageSwitch.css
@@ -62,11 +62,12 @@
     background: var(--c__main-bg);
     border-radius: var(--s__main-border-radius);
     box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
+    margin: 0;
     opacity: 0;
     overflow: hidden;
     padding: 0;
     position: absolute;
-    top: 16px;
+    right: auto;
     transition: all 0.2s ease;
     visibility: hidden;
   }
@@ -97,6 +98,10 @@
   @media (min-width: 46rem) {
     left: auto;
     right: var(--side-offset);
+
+    ul {
+      right: 0;
+    }
   }
 
   @media (min-width: 66rem) {
